@@ -1,11 +1,10 @@
  - Get icon name (esp. use of stock icons) working correctly
  - Add categories to many types in MIME database
  - Validation
- - Talk to gnome-vfs people about edit and print lines
- - Do something better about custom-line (i.e. create a dummy app in the app register)
  - Implement tree cascading
  - Fix gnome_url_show
  - Make add work
+ - Need a way to get all apps in the app registry
 
 CVS Surgery
  - Move file-types to gnome-control-center, rename ???
